--- a/Plugin.Maui.TabbarBadge/Plugin.Maui.TabbarBadge.csproj
+++ b/Plugin.Maui.TabbarBadge/Plugin.Maui.TabbarBadge.csproj
@@ -24,7 +24,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <None Include="..\readme.md" Pack="true" PackagePath="\"/>
+        <None Include="..\README.md" Pack="true" PackagePath="\"/>
     </ItemGroup>
     
     <ItemGroup>
